[gd_scene load_steps=9 format=3 uid="uid://cg2iri2ylp3n3"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_ryqo7"]
[ext_resource type="Texture2D" uid="uid://bt6awxb8ompdp" path="res://94b4329a-ea9f-4b9f-a7d8-a27d8e519d26.jpg" id="2_101fr"]
[ext_resource type="FontFile" uid="uid://5kuiy14sjim" path="res://nuku1.ttf" id="3_36uwa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t2vrp"]
texture = ExtResource("2_101fr")
modulate_color = Color(0.733005, 0.733005, 0.733005, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ybbqq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sy4bd"]
bg_color = Color(0.758192, 0.758192, 0.758192, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.619608)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4dcx"]
bg_color = Color(0.362829, 0.362829, 0.362829, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.619608)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_web1k"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.619608)
shadow_size = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ryqo7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t2vrp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -74.0
offset_right = 239.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_36uwa")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_ybbqq")
theme_override_styles/hover = SubResource("StyleBoxFlat_sy4bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4dcx")
theme_override_styles/normal = SubResource("StyleBoxFlat_web1k")
text = "Play"

[node name="How To Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_36uwa")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_ybbqq")
theme_override_styles/hover = SubResource("StyleBoxFlat_sy4bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4dcx")
theme_override_styles/normal = SubResource("StyleBoxFlat_web1k")
text = "How To Play"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_36uwa")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_ybbqq")
theme_override_styles/hover = SubResource("StyleBoxFlat_sy4bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4dcx")
theme_override_styles/normal = SubResource("StyleBoxFlat_web1k")
text = "Credits"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_36uwa")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_ybbqq")
theme_override_styles/hover = SubResource("StyleBoxFlat_sy4bd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4dcx")
theme_override_styles/normal = SubResource("StyleBoxFlat_web1k")
text = "Exit"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -275.0
offset_right = 246.5
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("3_36uwa")
theme_override_font_sizes/font_size = 130
text = "Hell Storm"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/How To Play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
